--- a/p3d&p5d css/p3d&p5d.css
+++ b/p3d&p5d css/p3d&p5d.css
@@ -2,8 +2,10 @@
 	margin: 0;
 	padding: 0;
 	list-style: none;
-	text-decoration: none;
+	text-decoration: none;	
 }
+
+       
 /*	<!--LOGO部分开始-->*/
 #bgd{background: #333333;}
 #head{
@@ -13,13 +15,15 @@
 }
 #head .left{float: left;}
 #head .right{float: right;}
-#head .left img{height: 80px;}
+#head .left img{height: 76px;}
 #head .right{height: 80px;}
 #head .user{margin: auto 0;
 color: whitesmoke;
 margin: 29px 0 0 0;
 cursor: pointer;
 }
+#bgd #head .right a:hover{background: none;}
+ .father {color: white;}
 #head .right .user .color{color:silver;}
 /*登陆相关部分开始*/
 #father {position: absolute;}
@@ -46,6 +50,7 @@ border: none;
 #user_log .right_2{cursor: pointer;background: rgba(0,0,0,0);color: aquamarine;}
 #user_log{display: none;}
 /*登陆相关部分结束*/
+
 /*<!--LOGO部分结束-->*/
 
 
@@ -62,6 +67,7 @@ border: none;
 }
 .nav_1 li{float: left;}
 .nav_1 li a{
+	left: 406px;
 	width: 120px;
 	height: 42px;
 	display: inline-block;
@@ -71,15 +77,12 @@ border: none;
 }
 #nav a:hover{background: #9B0909;}
 /*		<!--导航部分结束-->*/
-
 /*<!--banner模块开始-->*/
 #banner{
-	position: fixed;
+	margin-top: 42px;
 	position: relative;
-	margin: 42px 0 0 0;
 	height: 1067px;
 	width: 100%;
-	/*background: #D6E9E1;*/
 	background: url(../img/封面.jpg) center;
 }
 .banner背景1{
@@ -88,8 +91,6 @@ border: none;
 	background:rgba(0,0,0,0.7);
 	z-index: 100;
 	float: left;
-	/*left: 0px; 
-	top: 0px;*/
 }
 .banner背景2{
 	height: 1067px;
@@ -97,26 +98,11 @@ border: none;
 	background:rgba(0,0,0,0.7);
 	z-index: 100;
 	float: left;
-	/*left: 0px; 
-	top: 0px;*/
 }
-/*#banner .zuo{
-	height: 1030px;
-	width: 52%;
-	background: url(../img/zuo.png) left;
-	float: left;
-	margin-right: -50px;
-}
-#banner .you{
-	height: 1030px;
-	width: 53%;
-	background: url(../img/you.png) right;
-	float: left;
-	margin-left: -50px;*/
 .p3d{
 	position: absolute;
 	top: 375px;
-    left: 420px;
+    left: 29%;
 	height: 259px;
 	width: 312px;
 	background: url(../img/p3d.png) center no-repeat;
@@ -124,7 +110,7 @@ border: none;
 .p5d{
 	position: absolute;
     top: 375px;
-    left: 775px;
+    left: 51%;
     height: 259px;
 	width: 312px;
 	background: url(../img/p5d.png) no-repeat;
@@ -132,7 +118,7 @@ border: none;
 .p3d_1{
 	position: absolute;
 	top: 885px;
-    left: 220px;
+    left: 14%;
     width: 332px;
     height: 108px;
     background: url(../img/p3d_1.png) no-repeat;
@@ -140,7 +126,7 @@ border: none;
 .p5d_1{
 	position: absolute;
 	top: 885px;
-    left: 1000px;
+    left: 68%;
     width: 332px;
     height: 108px;
     background: url(../img/p5d_1.png) no-repeat;
