--- a/p3d&p5d css/p3d.css
+++ b/p3d&p5d css/p3d.css
@@ -3,7 +3,7 @@
 	padding: 0;
 	list-style: none;
 	text-decoration: none;
-}
+}       
 /*	<!--LOGO部分开始-->*/
 #bgd{background: #333333;}
 #head{
@@ -20,6 +20,8 @@ color: whitesmoke;
 margin: 29px 0 0 0;
 cursor: pointer;
 }
+#bgd #head .right a:hover{background: none;}
+ .father {color: white;}
 #head .right .user .color{color:silver;}
 /*登陆相关部分开始*/
 #father {position: absolute;}
@@ -46,6 +48,7 @@ border: none;
 #user_log .right_2{cursor: pointer;background: rgba(0,0,0,0);color: aquamarine;}
 #user_log{display: none;}
 /*登陆相关部分结束*/
+
 /*<!--LOGO部分结束-->*/
 
 
@@ -62,6 +65,7 @@ border: none;
 }
 .nav_1 li{float: left;}
 .nav_1 li a{
+	left: 406px;
 	width: 120px;
 	height: 42px;
 	display: inline-block;
@@ -115,6 +119,34 @@ border: none;
 	font-family: "微软雅黑";
 	font-weight: bold;
 }
+
+/*歌曲播放部分开始*/
+#music_stay{
+	position: fixed;
+	height: 275px;
+	width: 40px;
+	right: 0;
+	top: 122px;
+	font-size: 21px;
+	text-align: center;
+	background-color: rgba(0,9,255,0.3);
+	color: white;
+	cursor: pointer;
+}
+#music_stay .music_img{
+	width: 40px;
+	height: 40px;
+}
+#music_xinxi{
+	background-color: rgba(0,9,255,0.8);
+	position: fixed;
+	height: 500px;
+	width: 0px;
+	right: 40px;
+	top: 122px;
+}
+/*歌曲播放部分结束*/
+
 /*top部分开始*/
 #top{
 	width: 80px;
@@ -123,7 +155,40 @@ border: none;
     bottom: 2%;
     right: 2%;
 }
+#top a:hover{background: none;}
 #top img{
 	width: 80px;
 	height: 80px;
+}
+/*包含的歌曲列表*/
+#music{
+	height: 1000px;
+	width: 930px;
+	margin-top: 380px;
+	margin-left: 30px;
+}
+#music .music{
+	color: #0033FF;	
+	border-bottom: 2px solid #0033FF;
+	margin-bottom: 20px;
+}
+#music dl{
+	width: 930px;
+	height: 100px;
+	margin-bottom: 20px;
+}
+#music dt,dd{
+	float: left;
+}
+#music dt{
+	height: 98px;
+	width: 600px;
+}
+#music dd{
+	font-weight: 700;
+	line-height: 40px;
+	text-align: center;
+}
+.dd{
+	margin-top: 45px;
 }
